# cargo-xtest

./: .config.toml  .gitignore  Cargo.toml  defconfig.toml
.cargo/: config.toml
cargo-xbuild/: Cargo.toml
cargo-xbuild/src/: config.rs  main.rs  types.rs
crates/crate_a/: Cargo.toml
crates/crate_a/src/: lib.rs
crates/crate_b/: Cargo.toml
crates/crate_b/src/: lib.rs
crates/crate_net/: Cargo.toml
crates/crate_net/src/: lib.rs
crates/crate_smp/: Cargo.toml
crates/crate_smp/src/: lib.rs
entry/: Cargo.toml
entry/src/: main.rs
xtask/: Cargo.toml
xtask/src/: config.rs  main.rs  resolve.rs  types.rs  wrapper.rs
