[package]
name = "crate_a"
version = "0.1.0"
edition = "2024"

[lints.rust]
# Declare our custom cfg so `#[cfg(xconfig = "...")]` doesn't trigger `unexpected_cfgs`.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(xconfig, values("smp"))', 'cfg(__xfp, values(any()))'] }

[dependencies]
crate_b = { git = "https://github.com/luodeb/crate_b.git", default-features = false}

[package.metadata.xconfig]
smp = ["crate_b/smp"]