[package]
name = "crate_a"
version = "0.1.0"
edition = "2024"

[features]
net = ["dep:crate_net"]

[dependencies]
crate_b = { git = "https://github.com/luodeb/crate_b.git", default-features = false}
crate_net = { workspace = true, optional = true }

[package.metadata.xconfig]
smp = ["crate_b/smp"]
net = ["net"]