[package]
name = "crate_b"
version = "0.1.0"
edition = "2024"

[lints.rust]
# feature="smp" is injected externally via RUSTC_WRAPPER, declare it to
# suppress the `unexpected_cfgs` warning.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("smp"))', 'cfg(xconfig, values("smp"))', 'cfg(__xfp, values(any()))'] }

[dependencies]
crate_smp = { workspace = true }